--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
 
 .header {
   background-color: aqua;
-  padding: 10px 10px;
-  size: 40px;
+  padding: 8px 8px;
+  size: 50px;
   text-align: center;
 }
 
@@ -16,6 +16,7 @@
   display: table;
   clear: both;
 }
+
 .container{
   padding: 10px 10px;
 }
@@ -25,7 +26,7 @@
 }
 .input-task{
   margin-right: 0;
-  border: none;
+  /* border: none; */
   padding: 10px;
   border-radius: 0;
   width: 75%;
@@ -41,7 +42,7 @@
   padding: 10px;
   width: 25%;
   margin-left: 0;
-  background-color:rgb(187, 137, 235) ;
+  background-color:rgb(20, 227, 241) ;
   color:black;
   text-align: center;
   font-size: 16px;
@@ -78,7 +79,7 @@ ul li:hover{
 
 .edit-task{
   position: absolute;
-  right:60px;
+  right:100px;
   padding: auto;
 }
 
@@ -119,4 +120,13 @@ ul li:hover{
   text-align: center;
   border: 1px solid #999;
   font-size: 20px;
+}
+.showListbtn{
+  display: flex;
+  justify-content: center;
+}
+
+.task-list{
+  display: flex;
+  flex-direction: column;
 }
